# trading_platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci_cd.yml
fastapi-application/: alembic.ini  main.py
fastapi-application/alembic/: env.py
fastapi-application/alembic/versions/: 2024_08_24_1945-6c542dd4ec7a_create_models_tables.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: categories.py  products.py
fastapi-application/core/: config.py  docker-compose.yaml
fastapi-application/core/models/: __init__py  db_helper.py  models.py
fastapi-application/core/schemas/: categories.py
fastapi-application/crud/: categories.py  products.py
products-app/: .env.example  alembic.ini  main.py
products-app/api/api_v1/: __init__.py  products.py
products-app/core/: config.py
products-app/core/schemas/: products.py
products-app/crud/: products.py
products-app/tests/: conftest.py  test_api.py  test_categories_api.py  test_products_api.py
